--- a/Python Exercise-1.ipynb
+++ b/Python Exercise-1.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "9440837b",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "dc65397d",
    "metadata": {},
    "outputs": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "8aa2af92",
    "metadata": {},
    "outputs": [
@@ -128,7 +128,7 @@
        "int"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,17 +148,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "199f5257",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9"
+       "3"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,11 +177,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "6f4af95b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'12'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str(number1) + str(number2)"
+   ]
   },
   {
    "cell_type": "code",
@@ -217,11 +230,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d62ecf6c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def search(a,b):\n",
+    "    a = a.lower()\n",
+    "    b = b.lower()\n",
+    "    if b in a:\n",
+    "        return a.index(b)\n",
+    "    else:\n",
+    "        return -1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -238,18 +259,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
     }
    ],
    "source": [
-    "search('Hello world', 'hello')"
+    "search('Hello world', 'hello')\n"
    ]
   },
   {
@@ -259,23 +277,20 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "6"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
     }
    ],
    "source": [
-    "search('Hello world', 'WoRlD')"
+    "search('Hello world', 'WoRlD')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "59644814",
    "metadata": {},
    "outputs": [
@@ -285,7 +300,7 @@
        "5"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "646d480d",
    "metadata": {},
    "outputs": [],
@@ -330,11 +345,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "5cb7f780",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'potato'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "food[1]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -346,11 +374,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "f0033a83",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ramen', 'another food', 'chicken nuggets', 'pineapple']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "food[1] = 'another food'\n",
+    "food"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -365,8 +407,22 @@
    "execution_count": null,
    "id": "e4ecb664",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ramen', 'another food', 'chicken nuggets', 'pineapple', 'new food']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "food.append('new food')\n",
+    "food"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -378,11 +434,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "a73d9806",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['chicken nuggets', 'pineapple', 'new food']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "food[2:]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -394,11 +463,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "c8439527",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['new food', 'pineapple', 'chicken nuggets', 'another food', 'ramen']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "food[::-1]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -426,11 +508,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "07fddda9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ramen', 'another food', 'chicken nuggets', 'pineapple', 'new food']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_list = []\n",
+    "for i in food:\n",
+    "    if 'e' in i:\n",
+    "        new_list.append(i)\n",
+    "new_list"
+   ]
   },
   {
    "cell_type": "code",
@@ -466,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "526442c3",
    "metadata": {},
    "outputs": [],
@@ -488,11 +587,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "57f591a2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'bulbasaur'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pokemon['name']"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -507,8 +619,21 @@
    "execution_count": null,
    "id": "93538cf5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'bulbasaur', 'nickname': 'something else', 'shiny': False}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pokemon['nickname'] = 'something else'"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -520,11 +645,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "fabfde19",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pokemon['type'] = 'grass'"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -560,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "64d49dcc",
    "metadata": {},
    "outputs": [],
@@ -570,11 +697,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "ab4a9e41",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(numbers)):\n",
+    "    print(numbers[i])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -586,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "9e02a78e",
    "metadata": {},
    "outputs": [],
@@ -596,11 +738,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "d13b269f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2: yum!!!!!!!!\n",
+      "0.72: yum!!!!!!!!\n",
+      "0.83: yum!!!!!!!!\n",
+      "0.91: yum!!!!!!!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in potato_weights:\n",
+    "    if i > 0.7:\n",
+    "        print(f'{i}: yum!!!!!!!!')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -620,11 +777,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "d98be024",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.12\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in potato_weights:\n",
+    "    if i < 0.2:\n",
+    "        print(i)\n",
+    "        break"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -664,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "d4d8e163",
    "metadata": {},
    "outputs": [],
@@ -695,15 +865,39 @@
    "id": "af4ae986",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#purple, cap\n",
+    "\n",
+    "def checkPoisonous(a):\n",
+    "    if a.get('cap_color') == 'purple':\n",
+    "        return 'Just No!'\n",
+    "    if a.get('cap_diameter') < 10:\n",
+    "        return 'Do not eat'\n",
+    "    if a.get('has_skull') == False:\n",
+    "        return 'Drop it!!!!'\n",
+    "    return 'Enjoy'\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "e6de41ee",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Enjoy'"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "checkPoisonous(mushrooms[4])"
+   ]
   },
   {
    "cell_type": "code",
