--- a/Python Exercise-1.ipynb
+++ b/Python Exercise-1.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "9440837b",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "dc65397d",
    "metadata": {},
    "outputs": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "8aa2af92",
    "metadata": {},
    "outputs": [
@@ -128,7 +128,7 @@
        "int"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "199f5257",
    "metadata": {},
    "outputs": [
@@ -158,7 +158,7 @@
        "3"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "6f4af95b",
    "metadata": {},
    "outputs": [
@@ -187,7 +187,7 @@
        "'12'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "d62ecf6c",
    "metadata": {},
    "outputs": [],
@@ -254,16 +254,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d7ffba15",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -272,16 +275,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "38d01def",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6\n"
-     ]
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -290,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "59644814",
    "metadata": {},
    "outputs": [
@@ -300,7 +306,7 @@
        "5"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "646d480d",
    "metadata": {},
    "outputs": [],
@@ -345,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "5cb7f780",
    "metadata": {},
    "outputs": [
@@ -355,7 +361,7 @@
        "'potato'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "f0033a83",
    "metadata": {},
    "outputs": [
@@ -384,7 +390,7 @@
        "['ramen', 'another food', 'chicken nuggets', 'pineapple']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "e4ecb664",
    "metadata": {},
    "outputs": [
@@ -414,7 +420,7 @@
        "['ramen', 'another food', 'chicken nuggets', 'pineapple', 'new food']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "a73d9806",
    "metadata": {},
    "outputs": [
@@ -444,7 +450,7 @@
        "['chicken nuggets', 'pineapple', 'new food']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "c8439527",
    "metadata": {},
    "outputs": [
@@ -473,7 +479,7 @@
        "['new food', 'pineapple', 'chicken nuggets', 'another food', 'ramen']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "07fddda9",
    "metadata": {},
    "outputs": [
@@ -518,17 +524,14 @@
        "['ramen', 'another food', 'chicken nuggets', 'pineapple', 'new food']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "new_list = []\n",
-    "for i in food:\n",
-    "    if 'e' in i:\n",
-    "        new_list.append(i)\n",
-    "new_list"
+    "new_list = [item for item in food if 'e' in item]\n",
+    "new_list\n"
    ]
   },
   {
@@ -565,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "526442c3",
    "metadata": {},
    "outputs": [],
@@ -587,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "57f591a2",
    "metadata": {},
    "outputs": [
@@ -597,7 +600,7 @@
        "'bulbasaur'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -616,21 +619,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "93538cf5",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'name': 'bulbasaur', 'nickname': 'something else', 'shiny': False}"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pokemon['nickname'] = 'something else'"
    ]
@@ -645,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "id": "fabfde19",
    "metadata": {},
    "outputs": [],
@@ -687,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "id": "64d49dcc",
    "metadata": {},
    "outputs": [],
@@ -697,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "id": "ab4a9e41",
    "metadata": {},
    "outputs": [
@@ -728,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 23,
    "id": "9e02a78e",
    "metadata": {},
    "outputs": [],
@@ -738,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 24,
    "id": "d13b269f",
    "metadata": {},
    "outputs": [
@@ -777,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 25,
    "id": "d98be024",
    "metadata": {},
    "outputs": [
@@ -834,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 26,
    "id": "d4d8e163",
    "metadata": {},
    "outputs": [],
@@ -861,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "af4ae986",
    "metadata": {},
    "outputs": [],
@@ -880,17 +872,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 28,
    "id": "e6de41ee",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Enjoy'"
+       "'Drop it!!!!'"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
