--- a/project1/DmProject1.ipynb
+++ b/project1/DmProject1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "id": "684b205b",
    "metadata": {},
    "outputs": [],
@@ -11,13 +11,10 @@
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
     "import statsmodels.api as sm\n",
-    "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
     "from statsmodels.stats.outliers_influence import variance_inflation_factor\n",
     "\n",
     "\n"
@@ -25,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "id": "5805f330",
    "metadata": {},
    "outputs": [],
@@ -36,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 4,
    "id": "51b27f3f",
    "metadata": {},
    "outputs": [
@@ -249,7 +246,7 @@
        "[5 rows x 40 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 5,
    "id": "e2b50c9b",
    "metadata": {},
    "outputs": [
@@ -324,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 6,
    "id": "9862afda",
    "metadata": {},
    "outputs": [],
@@ -335,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 7,
    "id": "628307f6",
    "metadata": {},
    "outputs": [
@@ -546,7 +543,7 @@
        "4                 460          -1.5          -100.4         0  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 8,
    "id": "448d13c2",
    "metadata": {},
    "outputs": [],
@@ -585,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 22,
    "id": "ddc491ef",
    "metadata": {},
    "outputs": [
@@ -635,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 10,
    "id": "111c436b",
    "metadata": {},
    "outputs": [
@@ -660,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 11,
    "id": "9f125fc6",
    "metadata": {},
    "outputs": [],
@@ -672,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "d799a1bd",
    "metadata": {},
    "outputs": [
@@ -707,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 13,
    "id": "f4c73e8c",
    "metadata": {},
    "outputs": [],
@@ -719,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "68ae66d6",
    "metadata": {},
    "outputs": [
@@ -754,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 15,
    "id": "264478a6",
    "metadata": {},
    "outputs": [],
@@ -765,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 16,
    "id": "aa228e58",
    "metadata": {},
    "outputs": [],
@@ -778,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 17,
    "id": "d8ef532e",
    "metadata": {},
    "outputs": [
@@ -791,6 +788,89 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                              diffExperienceDiff  diffAssists  \\\n",
+      "diffExperienceDiff                      1.000000     0.605836   \n",
+      "diffAssists                             0.605836     1.000000   \n",
+      "diffWardsPlaced                         0.038276     0.048836   \n",
+      "diffWardsDestroyed                      0.123670     0.124672   \n",
+      "diffFirstBlood                          0.240665     0.303375   \n",
+      "diffEliteMonsters                       0.312598     0.255418   \n",
+      "diffTotalMinionsKilled                  0.625556     0.266344   \n",
+      "diffTotalJungleMinionsKilled            0.375999     0.032332   \n",
+      "diffTowersDestroyed                     0.296233     0.163933   \n",
+      "diffKills                               0.822845     0.830751   \n",
+      "blueWins                                0.489558     0.385866   \n",
+      "\n",
+      "                              diffWardsPlaced  diffWardsDestroyed  \\\n",
+      "diffExperienceDiff                   0.038276            0.123670   \n",
+      "diffAssists                          0.048836            0.124672   \n",
+      "diffWardsPlaced                      1.000000           -0.104968   \n",
+      "diffWardsDestroyed                  -0.104968            1.000000   \n",
+      "diffFirstBlood                       0.015850            0.045932   \n",
+      "diffEliteMonsters                    0.036029            0.053635   \n",
+      "diffTotalMinionsKilled              -0.028676            0.090088   \n",
+      "diffTotalJungleMinionsKilled         0.004485            0.011187   \n",
+      "diffTowersDestroyed                  0.003837            0.030626   \n",
+      "diffKills                            0.031802            0.127299   \n",
+      "blueWins                             0.016890            0.075205   \n",
+      "\n",
+      "                              diffFirstBlood  diffEliteMonsters  \\\n",
+      "diffExperienceDiff                  0.240665           0.312598   \n",
+      "diffAssists                         0.303375           0.255418   \n",
+      "diffWardsPlaced                     0.015850           0.036029   \n",
+      "diffWardsDestroyed                  0.045932           0.053635   \n",
+      "diffFirstBlood                      1.000000           0.171882   \n",
+      "diffEliteMonsters                   0.171882           1.000000   \n",
+      "diffTotalMinionsKilled              0.199729           0.163066   \n",
+      "diffTotalJungleMinionsKilled        0.029866           0.236691   \n",
+      "diffTowersDestroyed                 0.109140           0.174198   \n",
+      "diffKills                           0.366733           0.320472   \n",
+      "blueWins                            0.201769           0.259969   \n",
+      "\n",
+      "                              diffTotalMinionsKilled  \\\n",
+      "diffExperienceDiff                          0.625556   \n",
+      "diffAssists                                 0.266344   \n",
+      "diffWardsPlaced                            -0.028676   \n",
+      "diffWardsDestroyed                          0.090088   \n",
+      "diffFirstBlood                              0.199729   \n",
+      "diffEliteMonsters                           0.163066   \n",
+      "diffTotalMinionsKilled                      1.000000   \n",
+      "diffTotalJungleMinionsKilled                0.067111   \n",
+      "diffTowersDestroyed                         0.261224   \n",
+      "diffKills                                   0.435721   \n",
+      "blueWins                                    0.309126   \n",
+      "\n",
+      "                              diffTotalJungleMinionsKilled  \\\n",
+      "diffExperienceDiff                                0.375999   \n",
+      "diffAssists                                       0.032332   \n",
+      "diffWardsPlaced                                   0.004485   \n",
+      "diffWardsDestroyed                                0.011187   \n",
+      "diffFirstBlood                                    0.029866   \n",
+      "diffEliteMonsters                                 0.236691   \n",
+      "diffTotalMinionsKilled                            0.067111   \n",
+      "diffTotalJungleMinionsKilled                      1.000000   \n",
+      "diffTowersDestroyed                               0.049858   \n",
+      "diffKills                                         0.113480   \n",
+      "blueWins                                          0.169118   \n",
+      "\n",
+      "                              diffTowersDestroyed  diffKills  blueWins  \n",
+      "diffExperienceDiff                       0.296233   0.822845  0.489558  \n",
+      "diffAssists                              0.163933   0.830751  0.385866  \n",
+      "diffWardsPlaced                          0.003837   0.031802  0.016890  \n",
+      "diffWardsDestroyed                       0.030626   0.127299  0.075205  \n",
+      "diffFirstBlood                           0.109140   0.366733  0.201769  \n",
+      "diffEliteMonsters                        0.174198   0.320472  0.259969  \n",
+      "diffTotalMinionsKilled                   0.261224   0.435721  0.309126  \n",
+      "diffTotalJungleMinionsKilled             0.049858   0.113480  0.169118  \n",
+      "diffTowersDestroyed                      1.000000   0.247669  0.156179  \n",
+      "diffKills                                0.247669   1.000000  0.479379  \n",
+      "blueWins                                 0.156179   0.479379  1.000000  \n"
+     ]
     }
    ],
    "source": [
@@ -798,12 +878,13 @@
     "plt.figure(figsize=(12,8))\n",
     "sns.heatmap(corr[['blueWins']].sort_values(by='blueWins', ascending=False), annot=True, cmap='coolwarm')\n",
     "plt.title('Correlation of Features with Win Probability')\n",
-    "plt.show()"
+    "plt.show()\n",
+    "print(corr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 18,
    "id": "df9d75c7",
    "metadata": {},
    "outputs": [
@@ -827,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 19,
    "id": "c1561744",
    "metadata": {},
    "outputs": [
@@ -853,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "44d8f719",
    "metadata": {},
    "outputs": [
