--- a/project2/project2.ipynb
+++ b/project2/project2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "id": "207b753f",
    "metadata": {},
    "outputs": [],
@@ -29,17 +29,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "id": "71df994d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<contextlib.ExitStack at 0x334adf4d0>"
+       "<contextlib.ExitStack at 0x1103b3110>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "id": "139816b1",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "id": "3dac123d",
    "metadata": {},
    "outputs": [
@@ -273,7 +273,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "id": "bb42a463",
    "metadata": {},
    "outputs": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "id": "1d2b56df",
    "metadata": {},
    "outputs": [
@@ -349,7 +349,7 @@
        "<Axes: xlabel='Class', ylabel='count'>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "id": "ac042eb7",
    "metadata": {},
    "outputs": [
@@ -381,7 +381,7 @@
        "np.float64(0.0017304750013189597)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "id": "d748bc6f",
    "metadata": {},
    "outputs": [],
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "id": "c9b6ac85",
    "metadata": {},
    "outputs": [],
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "id": "98696f82",
    "metadata": {},
    "outputs": [
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "id": "b13ccd44",
    "metadata": {},
    "outputs": [],
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "id": "3fa33e80",
    "metadata": {},
    "outputs": [],
@@ -508,12 +508,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "id": "928a827b",
    "metadata": {},
    "outputs": [],
    "source": [
     "trained_models = {}\n",
+    "\n",
     "for name, clf in classifiers.items():\n",
     "    if name == \"Logistic Regression\":\n",
     "        X_train_const = sm.add_constant(X_train)\n",
@@ -521,57 +522,14 @@
     "    else:\n",
     "        model = clf.fit(X_train, y_train)\n",
     "    trained_models[name] = model\n",
+    "    \n",
+    "#take a long time to run\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3d4b342d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = LogisticRegression(random_state=42,class_weight=\"balanced\")\n",
-    "model.fit()\n",
-    "model.predict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "id": "c9347f5e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# from sklearn.inspection import permutation_importance\n",
-    "\n",
-    "# def calculate_feature_importance(classifiers, X_train, y_train):\n",
-    "#     importance_results = {}\n",
-    "\n",
-    "#     for name, clf in classifiers.items():\n",
-    "#         clf.fit(X_train, y_train)\n",
-    "\n",
-    "#         if name == \"Random Forest\":\n",
-    "#             importance_results[name] = clf.feature_importances_\n",
-    "\n",
-    "#         elif name == \"Logistic Regression\":\n",
-    "#             importance_results[name] = np.abs(clf.coef_[0])\n",
-    "\n",
-    "#         elif name == \"SVM\":\n",
-    "#             if hasattr(clf, \"coef_\"):  # only linear SVM\n",
-    "#                 importance_results[name] = np.abs(clf.coef_[0])\n",
-    "\n",
-    "#         elif name in [\"KNN\"]:\n",
-    "#             result = permutation_importance(clf, X_train, y_train, n_repeats=5, random_state=42, n_jobs=-1)\n",
-    "#             importance_results[name] = result.importances_mean\n",
-    "\n",
-    "#     return importance_results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 14,
    "id": "18488164",
    "metadata": {},
    "outputs": [],
@@ -581,13 +539,13 @@
     "    \n",
     "    for name, clf in classifiers.items():\n",
     "        \n",
-    "        # Train classifier\n",
+    "        # Train model \n",
     "        clf.fit(X_train, y_train)\n",
     "        \n",
-    "        # Predict on test set\n",
+    "   \n",
     "        y_pred = clf.predict(X_test)\n",
     "        \n",
-    "        # Generate classification report\n",
+    "        \n",
     "        report = classification_report(y_test, y_pred, digits=4)\n",
     "        reports[name] = report\n",
     "    \n",
@@ -596,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 15,
    "id": "9aebec4c",
    "metadata": {},
    "outputs": [
@@ -661,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 16,
    "id": "c9f3caf2",
    "metadata": {},
    "outputs": [],
@@ -689,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 17,
    "id": "adfa95db",
    "metadata": {},
    "outputs": [
@@ -733,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 18,
    "id": "edcca5c2",
    "metadata": {},
    "outputs": [
@@ -794,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 19,
    "id": "fac62bc8",
    "metadata": {},
    "outputs": [
@@ -820,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 20,
    "id": "b0c91597",
    "metadata": {},
    "outputs": [
