--- a/project4/project4.ipynb
+++ b/project4/project4.ipynb
@@ -24,7 +24,9 @@
    "id": "67082f51",
    "metadata": {},
    "source": [
-    "dataset description: This dataset contains transactions for a UK-based online retail store (about 500K rows). Each row = one product purchase."
+    "dataset description: This dataset contains transactions for a UK-based online retail store (about 500K rows). Each row = one product purchase.\n",
+    "\n",
+    "link: https://www.kaggle.com/datasets/abhishekrp1517/online-retail-transactions-dataset"
    ]
   },
   {
@@ -297,6 +299,14 @@
     "\n",
     "\n",
     "rfm.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9cb787a",
+   "metadata": {},
+   "source": [
+    "calculate the recency(most recent date), frequency and monetary(total money spend)"
    ]
   },
   {
